# aethercopy

./: .clang-format  CMakeLists.txt  README.md
include/aethercopy/: BackupEngine.h  FormatDetector.hpp  ThreadPool.h  archive_processor.h  async_copier.h  detector.h  filter.h  mime_types.h  thread_pool.h
include/aethercopy/ArchiveHandlers/: IArchiveHandler.h  LibarchiveArchiveHandler.h
include/aethercopy/copiers/: ICopier.h  IoURing.hpp  IoURingCopier.hpp  IoUringCopier.hpp  SyncCopier.h
src/: BackupEngine.cpp  FormatDetector.cpp  FormatFilter.cpp  ThreadPool.cpp  archive_processor.cpp  async_copier.cpp  detector.cpp  filter.cpp  main.cpp  mimeTypes.cpp  mime_types.cpp  thread_pool.cpp  thread_pool.h
src/ArchiveHandlers/: LibarchiveArchiveHandler.cpp
src/FilterBuilder/: FilterBuilder.cpp  FilterBuilder.hpp
src/cli/: CliHandler.cpp  CliHandler.h
src/copiers/: IoURingCopier.cpp  SyncCopier.cpp
tests/: ScopedTimer.hpp  TestBackupEngine.cpp  TestFormatFilter.cpp  TestIoURing.cpp  TestIoUringCopier.cpp  TestThreadPool.cpp  test_BackupEngine.cpp  test_LibarchiveHandler.cpp  test_filter.cpp  test_thread_pool.cpp
tests/data/Sample1/2/2.2/: WriterDocument2.odt
